# sysls

./: .env.example  .gitignore  .mcp.json.example  CLAUDE.md  README.md  dark-factory.md  pyproject.toml  slack-setup.md
.claude/: settings.json  settings.local.json.example
.claude/agents/: architect.md  junior.md
.claude/commands/: architect.md  code-review.md  commit.md  integration-test.md  junior.md  new-connector.md  new-strategy.md  new-venue.md  review-architecture.md  review-pr.md  start-phase.md  stuck.md
.github/workflows/: ci.yml
docs/: getting-started.md
scripts/: install-hooks.ps1  launch-architect.ps1  launch-junior.ps1  launch.ps1  launch.sh  pre-commit  resume.ps1  resume.sh  setup-github.ps1  setup-worktrees.ps1  supervisor.ps1  verify-slack.sh
src/sysls/: __init__.py
src/sysls/backtest/: __init__.py  metrics.py  optimize.py  replay.py  vectorized.py
src/sysls/core/: __init__.py  bus.py  clock.py  config.py  events.py  exceptions.py  types.py
tests/: conftest.py
tests/backtest/: __init__.py  test_metrics.py  test_optimize.py  test_replay.py  test_vectorized.py
tests/core/: test_bus.py  test_clock.py  test_config.py  test_events.py  test_exceptions.py  test_types.py
tests/data/: test_connector.py  test_normalize.py  test_polygon.py  test_store.py  test_store_arctic.py  test_store_memory.py
tests/execution/: test_base.py  test_ccxt_venue.py  test_ibkr.py  test_oms.py  test_paper.py  test_reconcile.py  test_router.py  test_tastytrade.py
tests/strategy/: test_base.py  test_portfolio.py  test_risk.py  test_signal.py
(+24 files in other folders)
